fix image spacing

--- a/site/static/base.css
+++ b/site/static/base.css
@@ -191,7 +191,6 @@ a.whitelink:visited, a.whitelink {
 
 .img {
     max-width: 100%;
-    border-radius: 3px;
 }
 
 .fullwidth {
